# -homework

./: README.md  main.py  mylog.txt  pyproject.toml
data/: transactions_excel.xlsx
src/: decorators.py  external_api.py  generators.py  logging_config.py  masks.py  processing.py  read_files.py  read_files_nev.py  search_operations.py  utils.py  widget.py
tests/: conftest.py  test_decorators.py  test_external_api.py  test_generators.py  test_masks.py  test_processing.py  test_read_files.py  test_read_files_nev.py  test_search_operations.py  test_utils.py  test_widget.py
